- Adjusted 'StubManager' to remove some PHP warnings
- Added 'svn:keywords 'Id' to all files
- WatchRight extension: removed dependency on ExtensionClass, now is 'stub'-enabled
- Added 'oversight' to the rights being managed  (see Special:Ipblocklist)
- Article.php: modified 'doDeleteArticle' method so that it does not delete RecentChanges entries (for the replicator)
- Adjusted 'ViewsourceRight' for 'stubbing'
- Adjusted 'RawRight' for 'stubbing'
- Merged functionality of CacheTools in PageFunctions
- Adjusted 'geshi' for 'stubbing'
- Adjusted 'FileSystemSyntaxColoring' for stubbing
- Adjusted 'ImageLink' for stubbing
- Adjusted 'ShowRedirectPageText' for stubbing
- Adjusted 'RecentChangesManager' for stubbing
- Adjusted 'SpecialPagesManager' for stubbing
- Adjusted 'InterWikiLinkManager' for stubbing
- Adjusted 'PageAfterAndBefore' for stubbing
- Adjusted 'FormProc' for stubbing
- Adjusted 'AutoLanguage' for stubbing
===============================
REL1_10_10: (released 02/08/2007) 
- Integrated MW API from SVN @ 24515
- Fixed ApiQueryLogEvents for returning the correct 'log_id' value
- UserSettingsChangedLog: changed log entry format to be more useful for the replicator
- UserSettingsChangedLog: Fixed multiple entries in the log when the user changes a preference setting
- UserSettingsChangedLog: Fixed to not add log entries upon account creation
- Added 'reload' right (FileManager extension)
- FileManager: added 'reload' capability
- FIXED broken 'ForeachFunction': missing file
===============================
REL1_10_11: (released ...) 
- Added 'NewUserEmailNotification' extension
- Added 'UserLoginLogoutLog' extension
- Adjusted 'PermissionFunctions' for stubbing
- StubManager: added namespace triggering functionality
- Adjusted 'InterWikiLinkManager' for namespace triggering
- Adjusted 'FileSystemSyntaxColoring' for namespace triggering
- Adjusted 'SecureHTML' for removing dependancy on ExtensionClass. Made 'stub'-enabled
- 